--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ h1{
     margin-top: 10px;
     display: flex;
     overflow-x: auto;
-
 }
    
 
@@ -128,7 +127,7 @@ h1{
 }
 
 h4{
-    font-size: 20px;
+    font-size: 18px;
     color: #FFFFFF;
 }
 
@@ -141,6 +140,10 @@ h4{
     align-items: center;
     background-color: #32B72F;
     font-weight: 700;
+}
+
+.botao-pronto h4{
+    font-size: 20px;
 }
 
 .escondido{
